ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/mega-navigation.scss
/* ... */
// arabic language
*[lang="ar"] {
  *[dir="rtl"] {
    .sub-menu-wrap .menu-items-footer {
      .sub-menu li:first-child {
        padding-left: 1.25rem;
        padding-right: 0;
      }
    }
    .main-mega-menu-desktop {
      .mega-menu-navbar-default {
        .logo-container {
          .navbar-header {
            @media (min-width: 992px) {
              padding-left: 2rem;
              padding-right: 0;
            }
          }
        }
        .navbar-items {
          .nav {
            &.navbar-nav {
              &.nav-right {
                > li {
                  &:last-child {
                    a {
                      padding-right: 1.6rem;
                      padding-left: 0;
                    }
                  }
                  .sub-account-menu-wrap {
                    .sub-account-menu {
                      margin-left: 0;
                      margin-right: 0;
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    .menu-promotion-wrapper.right-text .tiles-wrapper .tile .tile-content-wrapp {
      padding-left: 0;
      padding-right: 1rem;
    }
    .sub-menu-wrap .sub-menu li.sub-menu-heading a svg {
      transform: rotate(180deg);
    }
    .sub-menu-wrap .form.wst-form .form-group label {
      transform-origin: 100% 50% !important;
      right: 0;
    }
    .sub-menu-wrap .menu-brand-wrapper .menu-brand-item {
      margin-right: 0;
      margin-left: 10px;
    }
    .hamburger {
      float: right;
    }
    .nav-drill {
      right: 0;
      left: auto;
      transform: translateX(100%);
    }
    &.nav-is-toggled {
      .nav-drill {
        transform: translateX(0);
      }
      &::after {
        width: 105vw;
        left: -20px;
      }
    }
    .nav-link-icon {
      padding-right: 0;
      padding-left: 1rem;
    }
    .nav-link-arrow {
      margin-right: auto;
      margin-left: 0;
      transform: rotate(180deg);
    }
    .nav-expand {
      &.active {
        > .nav-expand-content {
          transform: translateX(0);
        }
      }
      .nav-expand-footer {
        .nav-link-arrow {
          right: auto;
          left: 1rem;
          transform: scale(0.8) rotate(180deg);
        }
      }
    }
    .nav-expand-link {
      &:after {
        left: 1rem;
        right: auto;
        transform: rotate(180deg);
      }
    }
    .nav-expand-content {
      transform: translateX(100%);
    }
    .nav-back-link {
      .nav-link-icon {
        padding-right: 0;
        padding-left: 0.2rem;
        order: 0;
        transform: rotate(0deg);
      }
    }
    .nav-item-heading {
      .sub-menu-arrow {
        transform: rotate(180deg);
      }
    }
    .mega-dropdown-mob {
      .nav-link-arrow {
        right: auto;
        left: 1rem;
        transform: rotate(90deg);
      }
      &.open {
        .nav-link-arrow {
          transform: rotate(270deg);
        }
      }
    }
    .mega-dropdown-mob-promotion {
      .menu-promotion-wrapper {
        .tiles-wrapper {
          .tile {
            .tile-content-wrapp {
              .content {
                .btn-text {
                  &:before {
                    right: auto;
                    top: 10px;
                  }
                }
              }
            }
          }
        }
      }
    }
    .nav-footer {
      .nav-link-icon {
        padding-left: 0rem;
        padding-right: 0rem;
        margin-right: 0.5rem;
      }
      .mega-dropdown-mob {
        .nav-link-arrow {
          left: 0;
        }
      }
      .nav-link {
        .link-icon {
          padding-right: 6px;
          padding-left: 0;
        }
      }
    }
    .nav-footer-wrapper-inline {
      flex: 1 1 auto;
      .nav-footer {
        .link-icon {
          padding-left: 0;
          padding-right: 6px;
        }
      }
    }
    .input-field .inner-icon {
      right: auto;
      left: 1rem;
    }
  }
}

//tablet

@media (max-width: 991px) {
  .main-mega-menu-desktop {
    .mega-menu-navbar-default {
      .navbar-items {
        display: none;
      }
    }
    .nav-wrap {
      align-items: center;
      justify-content: space-between;
    }
    .mobile-view {
      display: block;
    }
    .logo-container {
      display: flex;
      justify-content: center;
      width: 100%;
      order: 2;
    }
    .hamburger {
      order: 1;
    }
    .shopping-cart {
      order: 3;
    }
  }
}

//mobile

@media (max-width: 991px) {
  .main-mega-menu-desktop {
    .mega-menu-navbar-default {
      box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
    }
  }

  .mobile-view {
    display: block;
  }

  .sub-menu-wrap {
    .menu-promotion-wrapper {
      &.support {
        min-height: auto;
      }
    }
  }

  .nav-item {
    .menu-brand-wrapper {
      background-color: $white-gray;
    }
  }
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav > li.icon-link a .cart-count {
  width: 18px;
  height: 18px;
  background-color: #ffcc00;
  color: $cart-count-black;
  border-radius: 50%;
  line-height: 18px;
  position: absolute;
  left: 20px;
  letter-spacing: 2px;
  text-align: center;
  top: 24px;
  z-index: 99;
  letter-spacing: 0;
  font-weight: 700;
  @include font-family-lato();
  font-size: 10px;
}

.mobile-view.shopping-cart {
  position: relative;
  .mega-menu-link .cart-count {
    width: 18px;
    height: 18px;
    background-color: #ffcc00;
    color: $cart-count-black;
    border-radius: 50%;
    line-height: 18px;
    position: absolute;
    left: -6px;
    letter-spacing: 2px;
    text-align: center;
    top: -6px;
    z-index: 99;
    letter-spacing: 0;
    font-weight: 700;
    @include font-family-lato();
    font-size: 10px;
  }

  @include respond-to-min($tablet) {
    margin-right: 1rem;
  }
}
/* ... */

