bugfix/ETSL-798 changes for icon alignement

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/mega-navigation.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/mega-navigation.scss
@@ -1512,6 +1512,9 @@
     .nav-link-icon {
       padding-right: 0;
       padding-left: 1rem;
+      @include respond-to-min($desktop){
+        padding-left: 0;
+      }
     }
     .nav-link-arrow {
       margin-right: auto;
@@ -1895,7 +1898,6 @@ div.cover {
   opacity: 0;
   display: block !important;
 }
-
 
 // .config-section-wrap.add-links > .container {
 //   position: relative;
